=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

 - Added fallback to unformatted results if no column types are returned.

 - Display notification warning only when a new CrateDB version is released.

 - Added lineWrapping option to console Editor. 

 - Fixed issue that cause the console text to appear on top of the settings tab.

 - Fixed load reading display when the readings were invalid (for example,
   on Windows).

2017/03/16 1.2.0
================

 - Added monitoring plugin (enterprise)

 - Added Lazy loading of the stylesheet and plugins depending
   on the enterprise settings.  

 - Added buttons to collapse and expand all schemas in the tables view.

 - The console now expands vertically to show the whole query if its size
   is larger than the standard size of the console.

 - SQL console keywords are now CrateDB specific.

 - Improved formatted results of the `geo_area` datatype to include an external
   link to a visualisation of that geo_area.

 - Keywords in the SQL console are capitalised.

2017/03/16 1.1.2
================

 - Added node number to the status bar.

 - Fixed issue that caused `Cluster Offline` message to not be displayed.

 - Fixed a console results issue that caused the results table not to be 
   visible after horizontal scrolling.

 - Fixed styling issue that caused the last element in the side bar
   list to be hidden.

 - Fixed an issue that caused the notification date to be `null` in safari.

2017/02/15 1.1.1
================

 - Fixed a console results issue that caused the results table not to be 
   displayed after horizontal scrolling.

 - Fixed an issue that caused the admin-ui to load only one plugin.

 - Display warning in the console view when the query result contains
   an unsafe integer.

 - Relocated the help resources section to be underneath the tweet 
   import tutorial.

 - Show loading indicator when `Execute Query ` is in progress.